--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "commands": [
       {
         "command": "zpr-converter.generate",
-        "title": "Generar tasks.json desde .zpr"
+        "title": "zpr-converter: generar tasks.json desde .zpr"
       }
     ]
   },
