--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/Lucasa98/zpr-converter"
   },
-  "icon": "zinjaI.png",
+  "icon": "rsc/zinjaI.png",
   "engines": {
     "vscode": "^1.103.0"
   },
